<resources>
    <string name="app_name">Reach</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_yours">"Create Your Account"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="capacity">Capacity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_description">Event Description</string>
    <string name="new_account">New Account</string>
    <string name="current">Current Events</string>
    <string name="my_events">My Events</string>
    <string name="event_hosting">Events I\'m Hosting</string>
    <string name="event_attending">Events I\'m Attending</string>
    <string name="create_new_event">Create New Event</string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="details">Details</string>
    <string name="attend">Attend</string>

</resources>
